feat(index): linked styles to index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>My Github Page</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>This is h1</h1>
