feat: first attempt of landing page

--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <title>My Github Page</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
+
 <body>
-    <h1>This is h1</h1>
-    <p>This is p</p>
+    <div class="landing">
+        <div class="image-container">
+            <img src="assets/images/pixelatedMe.gif" alt="pfp1">
+        </div>
+        <h1>Jessica Lee</h1>
+        <div class="image-container">
+            <img src="assets/images/linkedinPfp.JPG" alt="pfp2">
+        </div>
+    </div>
 </body>
+
 </html>
