fix: fixed image file name

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="landing">
         <div class="image-container">
-            <img src="assets/images/holoface.gif" alt="pfp1">
+            <img src="assets/images/holoface.JPG" alt="pfp1">
         </div>
         <h1>Jessica Lee</h1>
         <div class="image-container">
