feat(footer): first implementation of footer

--- a/index.html
+++ b/index.html
@@ -82,10 +82,18 @@
                     <td>Startup Studio</td>
                     <td>Ongoing</td>
                 </tr>
-      
             </tbody>
         </table>
-      </div>
+    </div>
+
+    <footer>
+        <h3>Contact</h3>
+        <p>
+            <a href="mailto:jl4542@cornell.edu">Email</a> |
+            <a href="https://www.linkedin.com/in/jia-en-jessica-lee/" target="_blank">LinkedIn</a> |
+            <a href="https://github.com/jessjiaenl" target="_blank">GitHub</a>
+        </p>
+    </footer>
 </body>
 
 </html>
