feat(recipe): added html for using the spoonacular api for recipe

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
     </div>
 
     <div>
+        <div class="recipe">
+            <h1>Random Recipe</h1>
+            <button id="generate-button">Generate Random Recipe</button>
+            <div id="recipe-container"></div>
+        </div>
+    </div>
+
+    <div>
         <table>
             <caption>Courses Taken @ Cornell Tech</caption>
             <thead>
