fix(bio): put bio and name in a div to maintain grid

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
         <div class="image-container">
             <img src="assets/images/holoface.JPG" alt="pfp1">
         </div>
-        <h1>Jessica Lee</h1>
-        <p>I am a Cornell Tech student interested in cooking. We can both lookup random recipies form my website!</p>
+        <div>
+           <h1>Jessica Lee</h1>
+            <p>I am a Cornell Tech student interested in cooking. We can both lookup random recipies form my website!</p> 
+        </div>
         <div class="image-container">
             <img src="assets/images/linkedinPfp.JPG" alt="pfp2">
         </div>
