feat(api): try to link script in index.html, also added comments

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    <!-- landing page -->
     <div class="landing">
         <div class="image-container">
             <img src="assets/images/holoface.JPG" alt="pfp1">
@@ -19,6 +20,7 @@
         </div>
     </div>
 
+    <!-- spoonacular recipe API -->
     <div>
         <div class="recipe">
             <h1>Random Recipe</h1>
@@ -27,6 +29,7 @@
         </div>
     </div>
 
+    <!-- course taken table -->
     <div>
         <table>
             <caption>Courses Taken @ Cornell Tech</caption>
@@ -97,6 +100,7 @@
         </table>
     </div>
 
+    <!-- footer for contact info -->
     <footer>
         <h3>Contact</h3>
         <p>
@@ -105,6 +109,9 @@
             <a href="https://github.com/jessjiaenl" target="_blank">GitHub</a>
         </p>
     </footer>
+
+    <!-- link js script -->
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
